--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/router": "^5.0.0",
     "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
+    "jwt-decode": "^2.2.0",
     "ng2-charts": "^1.6.0",
     "rxjs": "^5.5.11",
+    "sweetalert": "^2.1.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
